# xai-jack

./: .gitignore  README.md  app.py  pyproject.toml
artifacts/audio_models/: README.md
artifacts/audio_models/custom_cnn/: training_report.json
artifacts/audio_models/vgg16/: training_report.json
artifacts/image_models/: README.md
artifacts/image_models/jsrt_alexnet/: training_report.json
artifacts/image_models/jsrt_densenet121/: training_report.json
docs/: pipeline-overview.md  project-structure.md  technical-report.md
sample_inputs/audio/: README.md  manifest.csv
sample_inputs/images/: README.md  manifest.csv
scripts/: convert_audio_to_wav.py  evaluate_audio_models.py  train_audio_models.py  train_image_models.py  verify_xai_stack.py
src/unified_xai/: __init__.py
src/unified_xai/core/: __init__.py  registry.py
src/unified_xai/modalities/: __init__.py
src/unified_xai/modalities/audio/: __init__.py  explainers.py  model.py  preprocess.py
src/unified_xai/modalities/image/: __init__.py  explainers.py  model.py  preprocess.py
src/unified_xai/services/: __init__.py  audio_service.py  explanation_service.py  image_explanation_service.py  image_service.py
src/unified_xai/ui/: __init__.py  app.py
tests/: conftest.py  test_audio_pipeline.py  test_demo_recommendations.py  test_image_pipeline.py  test_registry.py
